Add next phase countdown

--- a/index.html
+++ b/index.html
@@ -39,6 +39,10 @@
           <p class="status" id="time-zone">--</p>
         </div>
         <p id="current-time" class="time">--:--:--</p>
+        <div class="next-phase">
+          <p class="next-phase-label" id="next-phase-label">Next phase: --</p>
+          <p class="next-phase-countdown" id="next-phase-countdown">--</p>
+        </div>
       </section>
 
       <section class="card" aria-live="polite">
