Add horizon line and sun position

--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
+    <div class="sky-visual" aria-hidden="true">
+      <div class="horizon"></div>
+      <div class="sun"></div>
+    </div>
     <main class="container">
       <header class="hero">
         <p class="eyebrow">Civil Twilight</p>
